--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/rules-unit-testing": "^2.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "jest": "^29.5.0",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1"
   }
 }
