--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
+    "dotenv": "^16.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "fs": "^0.0.1-security",
     "jest": "^29.5.0",
     "lodash.debounce": "^4.0.8",
     "next": "13.4.3",
