--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "fs": "^0.0.1-security",
+    "gif-decoder": "^1.2.2",
     "jest": "^29.5.0",
     "lodash.debounce": "^4.0.8",
     "next": "13.4.3",
+    "png-js": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
